crates/pg_syntax/tests/snapshots/postgres_regress/horology@195.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('05121445482000', 'MMDDHH24MISSYYYY');"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..36
        Sconst@20..36 "'05121445482000'"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..56
        Sconst@38..56 "'MMDDHH24MISSYYYY'"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

