crates/pg_syntax/tests/snapshots/postgres_regress/horology@196.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2000January09Sunday', 'YYYYFMMonthDDFMDay');"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..63
    FuncCall@7..63
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..41
        Sconst@20..41 "'2000January09Sunday'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..63
        Sconst@43..63 "'YYYYFMMonthDDFMDay'"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

