crates/pg_syntax/tests/snapshots/postgres_regress/horology@197.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('97/Feb/16', 'YYMonDD');"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..31
        Sconst@20..31 "'97/Feb/16'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..42
        Sconst@33..42 "'YYMonDD'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

