crates/pg_syntax/tests/snapshots/postgres_regress/horology@198.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('97/Feb/16', 'YY:Mon:DD');"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..31
        Sconst@20..31 "'97/Feb/16'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..44
        Sconst@33..44 "'YY:Mon:DD'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

