crates/pg_syntax/tests/snapshots/postgres_regress/horology@203.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('1997 AD 11 16', 'YYYY BC MM DD');"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..52
    FuncCall@7..52
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..35
        Sconst@20..35 "'1997 AD 11 16'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..52
        Sconst@37..52 "'YYYY BC MM DD'"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

