crates/pg_syntax/tests/snapshots/postgres_regress/horology@205.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('1997 A.D. 11 16', 'YYYY B.C. MM DD');"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..37
        Sconst@20..37 "'1997 A.D. 11 16'"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..56
        Sconst@39..56 "'YYYY B.C. MM DD'"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

